<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16.0dip">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip">

        <TextView
            android:id="@+id/fastlogin_regiest_tv"
            style="@style/text_normal_color_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/register" />
    </RelativeLayout>

    <TextView
        style="@style/text_normal_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:text="@string/welcome_login"
        android:textSize="@dimen/text_28" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_marginTop="30.0dip"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/text_normal_color_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86" />

        <View
            android:layout_width="1.0dip"
            android:layout_height="30.0dip"
            android:layout_marginLeft="10.0dip"
            android:background="@color/bg_gray" />

        <com.xw.repo.XEditText
            android:id="@+id/fastlogin_phone_et"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginLeft="10.0dip"
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="5.0dip"
            android:textColor="@color/text_6"
            android:textColorHint="@color/text_hint"
            android:theme="@style/MyEditText"
            app:x_pattern="3,4,4"
            app:x_separator=" " />
    </LinearLayout>

    <include layout="@layout/line_h" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:gravity="center"
        android:orientation="horizontal">

        <com.xw.repo.XEditText
            android:id="@+id/fastlogin_code_et"
            android:layout_width="0.0dip"
            android:layout_height="45.0dip"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/input_code"
            android:inputType="number"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="5.0dip"
            android:paddingLeft="10.0dip"
            android:textColor="@color/text_6"
            android:textColorHint="@color/text_hint"
            android:theme="@style/MyEditText" />

        <TextView
            android:id="@+id/fastlogin_code_tv"
            style="@style/text_normal_color_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20.0dip"
            android:gravity="center_vertical"
            android:padding="8.0dip"
            android:text="@string/get_code"
            android:textColor="@color/text_theme" />
    </LinearLayout>

    <include layout="@layout/line_h" />

    <com.yzf.king.widget.StateButton
        android:id="@+id/fastlogin_bt"
        style="@style/button_text"
        android:layout_marginTop="30.0dip"
        android:text="@string/login"
        app:normalBackgroundColor="@color/light_theme"
        app:pressedBackgroundColor="@color/text_tip" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip">

        <TextView
            android:id="@+id/fastlogin_pwd_tv"
            style="@style/text_normal_color_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_by_pwd" />
    </RelativeLayout>
</LinearLayout>