<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/proxy_ll"
    >

    <include layout="@layout/title_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/ysf_text_size_20"
        android:background="@mipmap/proxy_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ysf_text_size_10"
            android:gravity="center"
            android:text="@string/proxy_name"
            android:textColor="@color/black_bar"
            android:textSize="@dimen/ysf_text_size_20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ysf_text_size_10"
            android:text="@string/proxy_title"
            android:textColor="@color/black_bar"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/ysf_text_size_10"
            android:text="@string/proxy_context"
            android:textColor="@color/black_bar"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/proxy_cb"
                style="@style/text_tip_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@null"
                android:checked="false"
                android:drawableLeft="@drawable/radio_proxy_button_selector"
                android:text="   我已阅读并同意" />

            <TextView
                android:id="@+id/proxy_contract_tv"
                style="@style/text_tip_style"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/proxy_cb"
                android:text="@string/proxy_agreement"
                android:textColor="@color/btn_blue" />

        </RelativeLayout>

        <Button
            android:id="@+id/proxy_upgrade_bt"
            android:text="立即升级"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/ysf_text_size_20"
            android:layout_marginBottom="@dimen/ysf_text_size_20"
            android:layout_marginLeft="@dimen/ysf_text_size_20"
            android:background="@drawable/proxy_btn_bg" />

    </LinearLayout>


</LinearLayout>